--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -48,8 +48,11 @@ button {
   color: white;
   margin-top: 20px;
   margin-bottom: 100px;
-  
+}
 
+.title1 {
+  margin-left: 50px;
+  color: white;
 }
 
 .flexbox-1 {
@@ -65,20 +68,27 @@ button {
 }
 
 .flexbox-2 {
-  width: 300px;
+  width: 280px;
   background-color: white;
   color: black;
-  padding: 50px;
-  margin: 5px 5px 5px 5px;
+  padding: 30px;
+  margin: 80px 20px 5px 5px;
   background-color: lightgrey;
   border-radius: 8%;
 }
 
-flexbox-app-3 {
-
+.flexbox-container1 {
+  display: flex;
+  flex-direction: row;
+  width: 250px;
+  justify-content: flex-start;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
-
+.form {
+  margin-top: 50px
+}
 
 
 // .postContainer {
